code/python/FactSetSupplyChain/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Supply Chain client library for Python

[![API Version](https://img.shields.io/badge/api-v2.0.0-blue)](https://developer.factset.com/api-catalog/factset-supply-chain-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.FactSetSupplyChain/0.2.0)](https://pypi.org/project/fds.sdk.FactSetSupplyChain/v/0.2.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

FactSet Supply Chain Relationships data exposes and classifies the business
relationships and interconnections among global companies.

Relationship information is sourced from trusted primary sources and
reverse-linked to non-disclosing parties, creating a comprehensive and
consistent relationship graph.

Access the complex networks of companies' key customers, suppliers,
competitors, and strategic partners, including both direct
(named by company) and reverse (named by other companies) relationships.

Over **43,000 companies** are actively covered and involved in more than
**735,000 relationships**.

Sources include primary public sources such as:

- SEC 10-K annual filings
- Investor presentations
- Press releases

This API provides the following endpoints:

- `/supply-chain` — Retrieve supplier and customer relationships with
  centrality measures, relevance grades, and revenue percentages
- `/relationships` — Retrieve competitor and partner relationships with
  sector overlap and relationship keywords

**Rate limits**

- 10 requests per second
- 10 concurrent requests per user


This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0.0
- SDK version: 0.2.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.FactSetSupplyChain==0.2.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.FactSetSupplyChain==0.2.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.10+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.10.0
      pyenv shell 3.10.0
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.FactSetSupplyChain
from fds.sdk.FactSetSupplyChain.api import batch_processing_api
from fds.sdk.FactSetSupplyChain.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.FactSetSupplyChain.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.FactSetSupplyChain.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.FactSetSupplyChain.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = batch_processing_api.BatchProcessingApi(api_client)
    id = "id_example" # str | Batch Request identifier.

    try:
        # Returns the response for a Batch Request
        # example passing only required values which don't have defaults set
        api_response_wrapper = api_instance.get_batch_data(id)

        # This endpoint returns a response wrapper that contains different types of responses depending on the query.
        # To access the correct response type, you need to perform one additional step, as shown below.
        if api_response_wrapper.get_status_code() == 200:
            api_response = api_response_wrapper.get_response_200()
        if api_response_wrapper.get_status_code() == 202:
            api_response = api_response_wrapper.get_response_202()

        pprint(api_response)
    except fds.sdk.FactSetSupplyChain.ApiException as e:
        print("Exception when calling BatchProcessingApi->get_batch_data: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Returns the response for a Batch Request
    #     api_response_wrapper, http_status_code, response_headers = api_instance.get_batch_data_with_http_info(id)

    #     # This endpoint returns a response wrapper that contains different types of responses depending on the query.
    #     # To access the correct response type, you need to perform one additional step, as shown below.
    #     if api_response_wrapper.get_status_code() == 200:
    #         api_response = api_response_wrapper.get_response_200()
    #     if api_response_wrapper.get_status_code() == 202:
    #         api_response = api_response_wrapper.get_response_202()

    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.FactSetSupplyChain.ApiException as e:
    #     print("Exception when calling BatchProcessingApi->get_batch_data: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Returns the response for a Batch Request
    #     async_result = api_instance.get_batch_data_async(id)
    #     api_response_wrapper = async_result.get()

    #     # This endpoint returns a response wrapper that contains different types of responses depending on the query.
    #     # To access the correct response type, you need to perform one additional step, as shown below.
    #     if api_response_wrapper.get_status_code() == 200:
    #         api_response = api_response_wrapper.get_response_200()
    #     if api_response_wrapper.get_status_code() == 202:
    #         api_response = api_response_wrapper.get_response_202()

    #     pprint(api_response)
    # except fds.sdk.FactSetSupplyChain.ApiException as e:
    #     print("Exception when calling BatchProcessingApi->get_batch_data: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Returns the response for a Batch Request
    #     async_result = api_instance.get_batch_data_with_http_info_async(id)
    #     api_response_wrapper, http_status_code, response_headers = async_result.get()

    #     # This endpoint returns a response wrapper that contains different types of responses depending on the query.
    #     # To access the correct response type, you need to perform one additional step, as shown below.
    #     if api_response_wrapper.get_status_code() == 200:
    #         api_response = api_response_wrapper.get_response_200()
    #     if api_response_wrapper.get_status_code() == 202:
    #         api_response = api_response_wrapper.get_response_202()

    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.FactSetSupplyChain.ApiException as e:
    #     print("Exception when calling BatchProcessingApi->get_batch_data: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.FactSetSupplyChain

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.FactSetSupplyChain.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.FactSetSupplyChain

configuration = fds.sdk.FactSetSupplyChain.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.FactSetSupplyChain

configuration = fds.sdk.FactSetSupplyChain.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.FactSetSupplyChain

configuration = fds.sdk.FactSetSupplyChain.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content/factset-supply-chain/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BatchProcessingApi* | [**get_batch_data**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/BatchProcessingApi.md#get_batch_data) | **GET** /batch-result | Returns the response for a Batch Request
*BatchProcessingApi* | [**get_batch_status**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/BatchProcessingApi.md#get_batch_status) | **GET** /batch-status | Returns the status for a Batch Request
*RelationshipsApi* | [**list_relationships**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsApi.md#list_relationships) | **GET** /relationships | Get competitor or partner relationships for requested entities.
*RelationshipsApi* | [**list_relationships_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsApi.md#list_relationships_for_list) | **POST** /relationships | Get competitor or partner relationships for a large list of entity IDs.
*SupplyChainApi* | [**list_supply_chain**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainApi.md#list_supply_chain) | **GET** /supply-chain | Get supply chain relationships for requested entities.
*SupplyChainApi* | [**list_supply_chain_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainApi.md#list_supply_chain_for_list) | **POST** /supply-chain | Get supply chain relationships for a large list of entity IDs.


## Documentation For Models

 - [Batch](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/Batch.md)
 - [BatchResult](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/BatchResult.md)
 - [BatchResultResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/BatchResultResponse.md)
 - [BatchStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/BatchStatus.md)
 - [BatchStatusResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/BatchStatusResponse.md)
 - [EntityResponseFields](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/EntityResponseFields.md)
 - [ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/ErrorObject.md)
 - [ErrorObjectSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/ErrorObjectSource.md)
 - [ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/ErrorResponse.md)
 - [IdentifierResponseFields](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/IdentifierResponseFields.md)
 - [Ids](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/Ids.md)
 - [RelationshipTypeEnum](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipTypeEnum.md)
 - [Relationships](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/Relationships.md)
 - [RelationshipsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsAllOf.md)
 - [RelationshipsFields](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsFields.md)
 - [RelationshipsFieldsEnum](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsFieldsEnum.md)
 - [RelationshipsItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsItem.md)
 - [RelationshipsItemAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsItemAllOf.md)
 - [RelationshipsRelationshipType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsRelationshipType.md)
 - [RelationshipsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsRequest.md)
 - [RelationshipsRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsRequestData.md)
 - [RelationshipsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RelationshipsResponse.md)
 - [RequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RequestMeta.md)
 - [RequestPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/RequestPagination.md)
 - [ResponseMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/ResponseMeta.md)
 - [ResponsePagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/ResponsePagination.md)
 - [Subsidiary](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/Subsidiary.md)
 - [SupplyChain](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChain.md)
 - [SupplyChainAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainAllOf.md)
 - [SupplyChainFields](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainFields.md)
 - [SupplyChainFieldsEnum](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainFieldsEnum.md)
 - [SupplyChainItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainItem.md)
 - [SupplyChainItemAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainItemAllOf.md)
 - [SupplyChainItemAllOfCentrality](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainItemAllOfCentrality.md)
 - [SupplyChainRelationshipType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainRelationshipType.md)
 - [SupplyChainRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainRequest.md)
 - [SupplyChainRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainRequestData.md)
 - [SupplyChainResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetSupplyChain/v2/docs/SupplyChainResponse.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.FactSetSupplyChain.apis and fds.sdk.FactSetSupplyChain.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.FactSetSupplyChain.api.default_api import DefaultApi`
- `from fds.sdk.FactSetSupplyChain.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.FactSetSupplyChain
from fds.sdk.FactSetSupplyChain.apis import *
from fds.sdk.FactSetSupplyChain.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

